[package]
name = "efihotkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
efivar = "1"
binread = "2"
clap = { version = "4.1.6", features = ["derive"] }
bitfield = "0.14.0"
binwrite = "0.2.1"
bimap = "0.6.2"
crc32fast = "1.3.2"